--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -2,7 +2,9 @@
 cmake_minimum_required(VERSION 3.9)
 
 project(TerminalEngine)
-add_subdirectory(Libraries/Terminal)
-add_subdirectory(Sources)
-add_subdirectory(ExternalLibraries/glm)
 
+set(librariesDir "Libraries")
+add_subdirectory(${CMAKE_SOURCE_DIR}/${librariesDir}/Terminal)
+add_subdirectory(${CMAKE_SOURCE_DIR}/${librariesDir}/Rasterizer)
+add_subdirectory(${CMAKE_SOURCE_DIR}/Sources)
+add_subdirectory(${CMAKE_SOURCE_DIR}/ExternalLibraries/glm)
