--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(
     ${PROJECT_NAME} main.cpp
 )
-target_link_libraries (${PROJECT_NAME} PRIVATE Terminal)
-target_link_libraries (${PROJECT_NAME} PRIVATE glm)
+target_link_libraries (${PROJECT_NAME} PUBLIC Terminal)
+target_link_libraries (${PROJECT_NAME} PUBLIC Rasterizer)
+target_link_libraries (${PROJECT_NAME} PUBLIC glm)
