--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -5,5 +5,6 @@ project(TerminalEngine)
 
 set(librariesDir "Libraries")
 add_subdirectory(${CMAKE_SOURCE_DIR}/${librariesDir}/Terminal)
+add_subdirectory(${CMAKE_SOURCE_DIR}/${librariesDir}/Rasterizer)
 add_subdirectory(${CMAKE_SOURCE_DIR}/Sources)
 add_subdirectory(${CMAKE_SOURCE_DIR}/ExternalLibraries/glm)
