--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 ALL_BUILD*
 ZERO_CHECK*
 *.cmake
@@ -11,3 +20,5 @@ build/
 *.vcxproj
 *.vcxproj.filters
 **/CMakeCache.txt
+*.a
+**/Makefile
